improved dockerfile removed start script, updated example docker-compose.yml with usage examples